# order/src/main/resources/swagger/api.yml
@@ -40,7 +40,7 @@ paths:
 
     get:
       description: 주문 목록을 조회한다.
-      operationId: getOrders
+      operationId: getOrderList
       tags:
         - Order
       responses:
@@ -49,7 +49,7 @@ paths:
           content:
             application/vnd.vroong.private.v1+json:
               schema:
-                $ref: '#/components/schemas/Orders'
+                $ref: '#/components/schemas/OrderList'
         #                배송비, 총 결제 금액, 주문 상품 목록
         '400':
           $ref: '#/components/responses/BadRequest'
@@ -99,8 +99,8 @@ paths:
             schema:
               $ref: '#/components/schemas/Order'
       responses:
-        '200':
-          description: Ok
+        '204':
+          description: No Content
         '400':
           $ref: '#/components/responses/BadRequest'
         '401':
@@ -177,7 +177,7 @@ components:
       format: date-time
       example: "2018-12-01T10:00:00Z"
 
-    String:
+    StringField:
       type: string
       example: "foo"
 
@@ -265,11 +265,11 @@ components:
       type: object
       properties:
         name:
-          $ref: '#/components/schemas/String'
+          $ref: '#/components/schemas/StringField'
         phoneNumber:
           $ref: '#/components/schemas/PhoneNumber'
         address:
-          $ref: '#/components/schemas/String'
+          $ref: '#/components/schemas/StringField'
 
     OrderLine:
       type: object
@@ -295,7 +295,7 @@ components:
         productId:
           $ref: '#/components/schemas/LongId'
         name:
-          $ref: '#/components/schemas/String'
+          $ref: '#/components/schemas/StringField'
         price:
           type: number
           example: 10000
@@ -324,7 +324,7 @@ components:
           type: number
           example: 10000
 
-    Orders:
+    OrderList:
       type: object
       properties:
         data:
